# libmesh

./: configure
examples/miscellaneous/miscellaneous_ex10/: Makefile.am  Makefile.in  exact_solution.C  miscellaneous_ex10.C
include/enums/: enum_elem_type.h
include/mesh/: serial_mesh.h
src/fe/: fe_interface.C  fe_lagrange_shape_3D.C  fe_monomial.C  fe_xyz.C
src/geom/: elem.C  elem_type.C
src/mesh/: exodusII_io_helper.C  mesh_generation.C  serial_mesh.C  unstructured_mesh.C
src/utils/: string_to_enum.C
