example_name  = miscellaneous_ex10
check_SCRIPTS = run.sh
install_dir   = $(examples_install_path)/miscellaneous/ex10
data          = miscellaneous_ex10.C exact_solution.C run.sh
sources       = $(data) run.sh
CLEANFILES    = solution_nostitching.exo solution_slow_stitching.exo solution_fast_stitching.exo

##############################################
# include common example environment
include $(top_srcdir)/examples/Make.common

